--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -82,7 +82,7 @@ body {
       align-items: center;
       background: var(--colorGrey);
       justify-content: center;
-      padding: .4375em 0.9375em;
+      padding: 0.4375em 0.9375em;
       &:first-of-type {
         margin-right: 0.9375em;
       }
@@ -91,12 +91,15 @@ body {
         &:first-of-type {
           text-transform: uppercase;
           font-size: 0.75em;
-          color: var(--colorDarkGrey)
+          color: var(--colorDarkGrey);
+          div.up {
+            animation: up 200ms ease-out;
+          }
         }
         &:last-of-type {
           // margin-top: 0.1875em;
           font-size: 1.5em;
-          color: var(--colorWhite)
+          color: var(--colorWhite);
         }
       }
     }
@@ -151,9 +154,6 @@ body {
   width: calc(31.2504rem + 3.75rem);
   flex-wrap: wrap;
   position: relative;
-  // top: 50%;
-  // left: 50%;
-  // transform: translate(-50%, -50%);
   background: var(--colorLightGrey);
   padding: 0.312rem;
   user-select: none;
@@ -172,7 +172,7 @@ body {
       display: flex;
       justify-content: center;
       align-items: center;
-      box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.1) inset;
+      box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.3) inset;
       &.new {
         animation: new 200ms ease-out;
       }
@@ -184,6 +184,7 @@ body {
       }
       &.rank-2 {
         background: var(--colorRank-2);
+        
       }
       &.rank-4 {
         background: var(--colorRank-4);
@@ -232,34 +233,35 @@ body {
 @keyframes new {
   0% {
     opacity: 0;
-    -webkit-transform: scale(0);
-    -moz-transform: scale(0);
     transform: scale(0);
   }
 
   100% {
     opacity: 1;
-    -webkit-transform: scale(1);
-    -moz-transform: scale(1);
     transform: scale(1);
   }
 }
 @keyframes merge {
   0% {
-    -webkit-transform: scale(0);
-    -moz-transform: scale(0);
     transform: scale(0);
   }
 
   50% {
-    -webkit-transform: scale(1.2);
-    -moz-transform: scale(1.2);
     transform: scale(1.2);
   }
 
   100% {
-    -webkit-transform: scale(1);
-    -moz-transform: scale(1);
+    transform: scale(1);
+  }
+}
+@keyframes up {
+  0% {
+    opacity: 0;
+    transform: translateY(10px);
+  }
+
+  100% {
+    opacity: 1;
     transform: scale(1);
   }
 }
