--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,10 +1,13 @@
 :root {
-  --colorWhite: rgb(250, 250, 244);
-  --colorBlack: rgb(80, 80, 80);
-  --colorLightGrey: rgb(226, 226, 226);
-  --colorGrey: rgb(201, 201, 201);
-  --colorDarkGrey: rgb(104, 104, 104);
-  /* */
+  --color-black-1: #ffffff;
+  --color-black-2: #f0f0f0;
+  --color-black-3: #e1e1e1;
+  --color-black-4: #c8c8c8;
+  --color-black-5: #aaaaaa;
+  --color-black-6: #8c8c8c;
+  --color-black-7: #6e6e6e;
+  --color-black-8: #505050;
+  --color-black-9: #323232;
   --colorRank-2: #f5eaf7;
   --colorRank-4: #d8c8ec;
   --colorRank-8: #c4c4f7;
@@ -24,15 +27,15 @@
   margin: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  -webkit-border-radius: 0.312rem;
-          border-radius: 0.312rem;
+  -webkit-border-radius: 4.992px;
+          border-radius: 4.992px;
 }
 
 html,
 body {
-  font-size: 15.9936px;
+  font-size: 18px;
   font-family: "Roboto", serif;
-  color: var(--colorDarkGrey);
+  color: var(--color-black-7);
 }
 
 @media screen and (max-width: 600px) {
@@ -49,21 +52,41 @@ body {
   }
 }
 
+button {
+  cursor: pointer;
+  outline: none;
+  border: none;
+  font-size: 18px;
+  font-weight: bold;
+  letter-spacing: 1px;
+  color: var(--color-black-1);
+  background: var(--color-black-7);
+  padding: 10px 20px;
+  white-space: nowrap;
+  -webkit-transition: 0.2s;
+  -o-transition: 0.2s;
+  transition: 0.2s;
+}
+
+button:hover {
+  background: var(--color-black-8);
+}
+
+a {
+  color: var(--color-black-7);
+  text-decoration: none;
+  -webkit-transition: 0.2s;
+  -o-transition: 0.2s;
+  transition: 0.2s;
+}
+
+a:hover {
+  color: var(--color-black-8);
+}
+
 .container {
   margin: auto;
   width: 560px;
-}
-
-@media screen and (max-width: 600px) {
-  .container {
-    width: 385px;
-  }
-}
-
-@media screen and (max-width: 400px) {
-  .container {
-    width: 350px;
-  }
 }
 
 .header {
@@ -79,20 +102,8 @@ body {
   -webkit-align-items: center;
       -ms-flex-align: center;
           align-items: center;
-  font-size: 1rem;
-  margin-top: 0.9375em;
-}
-
-@media screen and (max-width: 600px) {
-  .header {
-    font-size: 1.2rem;
-  }
-}
-
-@media screen and (max-width: 400px) {
-  .header {
-    font-size: 1rem;
-  }
+  font-size: 16px;
+  margin-top: 15px;
 }
 
 .header h1.logo {
@@ -106,16 +117,7 @@ body {
 }
 
 .header h1.logo a {
-  font-size: 2.5em;
-  color: var(--colorDarkGrey);
-  text-decoration: none;
-  -webkit-transition: 0.2s;
-  -o-transition: 0.2s;
-  transition: 0.2s;
-}
-
-.header h1.logo a:hover {
-  color: var(--colorBlack);
+  font-size: 80px;
 }
 
 .header div {
@@ -139,16 +141,16 @@ body {
   -webkit-align-items: center;
       -ms-flex-align: center;
           align-items: center;
-  background: var(--colorGrey);
+  background: var(--color-black-4);
   -webkit-box-pack: center;
   -webkit-justify-content: center;
       -ms-flex-pack: center;
           justify-content: center;
-  padding: 0.4375em 0.9375em;
+  padding: 7px 15px;
 }
 
 .header div .score:first-of-type {
-  margin-right: 0.9375em;
+  margin-right: 15px;
 }
 
 .header div .score span {
@@ -157,8 +159,8 @@ body {
 
 .header div .score span:first-of-type {
   text-transform: uppercase;
-  font-size: 0.75em;
-  color: var(--colorDarkGrey);
+  font-size: 14px;
+  color: var(--color-black-8);
 }
 
 .header div .score span:first-of-type div.up {
@@ -167,8 +169,8 @@ body {
 }
 
 .header div .score span:last-of-type {
-  font-size: 1.5em;
-  color: var(--colorWhite);
+  font-size: 24px;
+  color: var(--color-black-1);
 }
 
 .sub-header {
@@ -184,76 +186,61 @@ body {
   -webkit-align-items: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-top: 0.625em;
-  font-size: 1rem;
-}
-
-@media screen and (max-width: 600px) {
-  .sub-header {
-    font-size: 1.3rem;
-  }
-}
-
-@media screen and (max-width: 400px) {
-  .sub-header {
-    font-size: 1rem;
-  }
+  margin-top: 10px;
 }
 
 .sub-header p {
-  margin-right: 0.625em;
-  font-size: 1.1rem;
-}
-
-.sub-header button {
-  cursor: pointer;
-  outline: none;
-  border: none;
-  font-size: 1.3rem;
-  color: var(--colorWhite);
-  background: var(--colorDarkGrey);
-  padding: 0.4375em 0.9375em;
-  white-space: nowrap;
-  -webkit-transition: 0.2s;
-  -o-transition: 0.2s;
-  transition: 0.2s;
-}
-
-.sub-header button:hover {
-  background: var(--colorBlack);
+  margin-right: 10px;
 }
 
 .learn {
   margin-top: 15px;
-  font-size: 1.1rem;
 }
 
-@media screen and (max-width: 600px) {
-  .learn {
-    font-size: 1.3rem;
-  }
+#gameOver {
+  display: none;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.3);
 }
 
-@media screen and (max-width: 400px) {
-  .learn {
-    font-size: 1rem;
-  }
+#gameOver .modalBody {
+  padding: 30px;
+  background: var(--color-black-1);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
+#gameOver .modalBody .modalTitle {
+  cursor: default;
+  font-size: 30px;
+  font-weight: bold;
+}
+
+#gameOver .modalBody div {
+  margin-top: 15px;
+  text-align: center;
 }
 
 #game {
-  margin-top: 1.25rem;
+  margin-top: 20px;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  width: -webkit-calc(31.2504rem + 3.75rem);
-  width: calc(31.2504rem + 3.75rem);
   -webkit-flex-wrap: wrap;
       -ms-flex-wrap: wrap;
           flex-wrap: wrap;
   position: relative;
-  background: var(--colorLightGrey);
-  padding: 0.312rem;
+  background: var(--color-black-3);
+  padding: 4.992px;
   -webkit-user-select: none;
      -moz-user-select: none;
       -ms-user-select: none;
@@ -263,11 +250,11 @@ body {
 }
 
 #game .square {
-  margin: 0.312rem;
-  height: 6.2496rem;
-  width: 6.2496rem;
-  background: var(--colorWhite);
-  font-size: 3.5rem;
+  margin: 5px;
+  height: 100px;
+  width: 100px;
+  background: var(--color-black-1);
+  font-size: 56px;
   font-weight: bold;
 }
 
@@ -330,32 +317,32 @@ body {
 
 #game .square div.rank-128 {
   background: var(--colorRank-128);
-  font-size: 3rem;
+  font-size: 48px;
 }
 
 #game .square div.rank-256 {
   background: var(--colorRank-256);
-  font-size: 3rem;
+  font-size: 48px;
 }
 
 #game .square div.rank-512 {
   background: var(--colorRank-512);
-  font-size: 3rem;
+  font-size: 48px;
 }
 
 #game .square div.rank-1024 {
   background: var(--colorRank-1024);
-  font-size: 2.5rem;
+  font-size: 40px;
 }
 
 #game .square div.rank-2048 {
   background: var(--colorRank-2048);
-  font-size: 2.25rem;
+  font-size: 36px;
 }
 
 #game .square div.rank-4096 {
   background: var(--colorRank-4096);
-  font-size: 2.25rem;
+  font-size: 36px;
 }
 
 @-webkit-keyframes new {
