--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -193,11 +193,55 @@ a:hover {
   margin-right: 10px;
 }
 
+.sub-header div {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.sub-header div .settings {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  position: relative;
+  margin-right: 10px;
+}
+
+.sub-header div .settings:hover i {
+  -webkit-transform: rotate(180deg);
+      -ms-transform: rotate(180deg);
+          transform: rotate(180deg);
+}
+
+.sub-header div .settings i {
+  font-size: 30px;
+  cursor: pointer;
+  -webkit-transition: -webkit-transform 200ms ease-out;
+  transition: -webkit-transform 200ms ease-out;
+  -o-transition: transform 200ms ease-out;
+  transition: transform 200ms ease-out;
+  transition: transform 200ms ease-out, -webkit-transform 200ms ease-out;
+}
+
 .learn {
   margin-top: 15px;
 }
 
-#gameOver {
+.modal {
   display: none;
   position: absolute;
   top: 0;
@@ -207,8 +251,9 @@ a:hover {
   background: rgba(0, 0, 0, 0.3);
 }
 
-#gameOver .modalBody {
-  padding: 30px;
+.modal .modalBody {
+  min-width: 250px;
+  padding: 15px;
   background: var(--color-black-1);
   position: absolute;
   top: 50%;
@@ -218,15 +263,38 @@ a:hover {
           transform: translate(-50%, -50%);
 }
 
-#gameOver .modalBody .modalTitle {
+.modal .modalBody .modalTitle {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   cursor: default;
   font-size: 30px;
   font-weight: bold;
 }
 
-#gameOver .modalBody div {
-  margin-top: 15px;
+.modal .modalBody > div {
+  margin-top: 30px;
   text-align: center;
+}
+
+.modal .modalBody .row {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 #game {
@@ -425,4 +493,62 @@ a:hover {
     -webkit-transform: scale(1);
             transform: scale(1);
   }
+}
+
+.switch {
+  width: 62px;
+  height: 32px;
+  background: #e5e5e5;
+  z-index: 0;
+  margin: 0;
+  padding: 0;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  border: none;
+  cursor: pointer;
+  position: relative;
+  border-radius: 16px;
+  -moz-border-radius: 16px;
+  -webkit-border-radius: 16px;
+}
+
+.switch:before {
+  content: " ";
+  position: absolute;
+  left: 1px;
+  top: 1px;
+  width: 60px;
+  height: 30px;
+  background: #ffffff;
+  z-index: 1;
+  border-radius: 16px;
+  -moz-border-radius: 16px;
+  -webkit-border-radius: 16px;
+}
+
+.switch:after {
+  content: ' ';
+  height: 29px;
+  width: 29px;
+  -webkit-border-radius: 28px;
+          border-radius: 28px;
+  background: #fff;
+  position: absolute;
+  z-index: 2;
+  top: 1px;
+  left: 1px;
+  -webkit-transition-duration: 300ms;
+  -o-transition-duration: 300ms;
+     transition-duration: 300ms;
+  -webkit-box-shadow: 0 2px 5px #999999;
+  box-shadow: 0 2px 5px #999999;
+}
+
+.switchOn, .switchOn:before {
+  background: #4cd964 !important;
+}
+
+.switchOn:after {
+  left: 32px !important;
 }
