--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -123,11 +123,31 @@ a {
   p {
     margin-right: 10px;
   }
+  div {
+    display: flex;
+    align-items: center;
+    .settings {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      position: relative;
+      margin-right: 10px;
+      &:hover i {
+        transform: rotate(180deg);
+      }
+      i {
+        font-size: 30px;
+        cursor: pointer;
+        transition: transform 200ms ease-out;
+      }
+    }
+  }
 }
+
 .learn {
   margin-top: 15px;
 }
-#gameOver {
+.modal {
   display: none;
   position: absolute;
   top: 0;
@@ -136,20 +156,28 @@ a {
   left: 0;
   background: rgba(0, 0, 0, 0.3);
   .modalBody {
-    padding: 30px;
+    min-width: 250px;
+    padding: 15px;
     background: var(--color-black-1);
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     .modalTitle {
+      display: flex;
+      justify-content: center;
       cursor: default;
       font-size: 30px;
       font-weight: bold;
     }
-    div {
-      margin-top: 15px;
+    & > div {
+      margin-top: 30px;
       text-align: center;
+    }
+    .row {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
     }
   }
 }
@@ -267,4 +295,57 @@ a {
     opacity: 1;
     transform: scale(1);
   }
+}
+
+.switch {
+  width: 62px;
+  height: 32px;
+  background: #e5e5e5;
+  z-index: 0;
+  margin: 0;
+  padding: 0;
+  appearance: none;
+  border: none;
+  cursor: pointer;
+  position: relative;
+  border-radius: 16px; //IE 11
+  -moz-border-radius: 16px; //Mozilla
+  -webkit-border-radius: 16px; //Chrome и Safari
+  &:before {
+    content: " ";
+    position: absolute;
+    left: 1px;
+    top: 1px;
+    width: 60px;
+    height: 30px;
+    background: #ffffff;
+    z-index: 1;
+    border-radius: 16px; //IE 11
+    -moz-border-radius: 16px; //Mozilla
+    -webkit-border-radius: 16px; //Chrome и Safari
+  }
+  &:after {
+    content: ' ';
+    height: 29px;
+    width: 29px;
+    border-radius: 28px;
+    background: #fff;
+    position: absolute;
+    z-index: 2;
+    top: 1px;
+    left: 1px;
+    -webkit-transition-duration: 300ms;
+    transition-duration: 300ms;
+    -webkit-box-shadow: 0 2px 5px #999999;
+    box-shadow: 0 2px 5px #999999;
+    }
+}
+.switchOn,.switchOn:before
+{
+background: #4cd964 !important;
+}
+
+.switchOn:after
+{
+left: 32px !important;
 }
