--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -170,12 +170,13 @@ a:hover {
 }
 
 .header div .score span.increaseScore {
-  margin-top: 17px;
+  margin-top: 20px;
   position: absolute;
-  font-size: 24px;
+  font-size: 30px;
   color: var(--color-black-7);
-  -webkit-animation: up 700ms ease-out infinite;
-          animation: up 700ms ease-out infinite;
+  -webkit-animation: up 1000ms ease-out infinite;
+          animation: up 1000ms ease-out infinite;
+  text-shadow: 0px 0px 2px black;
 }
 
 .sub-header {
