--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -109,11 +109,12 @@ a {
           color: var(--color-black-1);
         }
         &.increaseScore {
-          margin-top: 17px;
+          margin-top: 20px;
           position: absolute;
-          font-size: 24px;
+          font-size: 30px;
           color: var(--color-black-7);
-          animation: up 700ms ease-out infinite;
+          animation: up 1000ms ease-out infinite;
+          text-shadow: 0px 0px 2px rgba(0, 0, 0, 1);
         }
       }
     }
